<resources>
    <string name="app_name">DocIT</string>
    <string name="user">User Name:</string>
    <string name="pass">Password:</string>
    <string name="login">Log In</string>
    <string name="signup">Sign Up</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="email">Email:</string>
    <string name="fname">First name:</string>
    <string name="lname">Last name:</string>
    <string name="repass">Retype password:</string>
    <string name="sb_name">Story Book name:</string>
    <string name="sb_desc">Story Book description:</string>
    <string name="sb_type">Story Book type:</string>
    <string name="sb_members">Story Book members:</string>
    <string name="cretesb">Create new Story Book</string>
    <string name="signout">Sign Out</string>
    <string name="date_happend">When did it happend?</string>
    <string name="users_involved">Who were there?</string>
    <string name="story_add">Add story</string>
    <string name="story_types_quote">Quote</string>
    <string name="story_types_story">Story</string>
    <string name="story_types_img">Image</string>
    <string name="story_types_milestone">Milestone</string>
    <string name="quote_sayer">Who said it : </string>
    <string name="next">Next >></string>
    <string name="back">Back</string>
    <string name="take_a_picture">Take a picture</string>
    <string name="take_pic_from_gallary">Take pic from gallary</string>
    <string name="story_title_creator">Story Title:</string>
    <string name="story_text_creator">Story Text:</string>
    <string name="milestone_reached">Milestone Reached!</string>
    <string name="baby_par">Baby paragraph:</string>
    <string name="pargraph_1">First Paragraph about the baby</string>
    <string name="new_born">New Born Milestone</string>
    <string name="invovled_text">Involved Users:</string>
    <string name="pargraph_3">New baby room paragraph</string>
    <string name="baby_room">Baby room:</string>
    <string name="pargraph_2">Mom and Dad paragraph</string>
    <string name="mom_n_dad_par">Mom and Dad</string>
    <string name="user_input">username@mail.com</string>
    <string name="pass_input">password</string>


</resources>
