<?xml version="1.0" encoding="utf-8"?>
<LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"
               android:orientation="vertical"
               android:layout_width="match_parent"
               android:layout_height="wrap_content">
    <LinearLayout
        android:padding="10dp"
          android:orientation="vertical"
          android:layout_width="match_parent"
          android:layout_height="wrap_content">

        <TextView
            android:text="@string/baby_par"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp">

            <ImageView
                android:id="@+id/baby_pic"
                android:layout_weight="3"
                android:layout_width="0dp"
                android:layout_height="match_parent"/>

            <LinearLayout
                android:orientation="vertical"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent">

                <ImageButton
                    android:id="@+id/camera_btn1"
                    android:src="@android:drawable/ic_menu_camera"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/take_a_picture"/>


                <ImageButton
                    android:id="@+id/gallary_btn1"
                    android:src="@android:drawable/ic_menu_gallery"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/take_pic_from_gallary"/>
            </LinearLayout>


        </LinearLayout>
        <EditText
            android:id="@+id/par_1"
            android:ems="10"
            android:gravity="left|top"
            android:inputType="textMultiLine"
            android:hint="@string/pargraph_1"
            android:layout_width="match_parent"
            android:layout_height="50dp"/>

    </LinearLayout>

    <LinearLayout
        android:padding="10dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/mom_n_dad_par"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp">

            <ImageView
                android:id="@+id/mnd_pic"
                android:layout_weight="3"
                android:layout_width="0dp"
                android:layout_height="match_parent"/>

            <LinearLayout
                android:orientation="vertical"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent">

                <ImageButton
                    android:id="@+id/camera_btn2"
                    android:src="@android:drawable/ic_menu_camera"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/take_a_picture"/>


                <ImageButton
                    android:id="@+id/gallary_btn2"
                    android:src="@android:drawable/ic_menu_gallery"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/take_pic_from_gallary"/>
            </LinearLayout>


        </LinearLayout>
        <EditText
            android:ems="10"
            android:gravity="left|top"
            android:id="@+id/par_2"
            android:inputType="textMultiLine"
            android:hint="@string/pargraph_2"
            android:layout_width="match_parent"
            android:layout_height="50dp"/>

    </LinearLayout>

    <LinearLayout
        android:padding="10dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/baby_room"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp">

            <ImageView
                android:id="@+id/room_pic"
                android:layout_weight="3"
                android:layout_width="0dp"
                android:layout_height="match_parent"/>

            <LinearLayout
                android:orientation="vertical"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent">

                <ImageButton
                    android:id="@+id/camera_btn3"
                    android:src="@android:drawable/ic_menu_camera"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/take_a_picture"/>


                <ImageButton
                    android:id="@+id/gallary_btn3"
                    android:src="@android:drawable/ic_menu_gallery"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/take_pic_from_gallary"/>
            </LinearLayout>


        </LinearLayout>
        <EditText
            android:ems="10"
            android:gravity="left|top"
            android:id="@+id/par_3"
            android:inputType="textMultiLine"
            android:hint="@string/pargraph_3"
            android:layout_width="match_parent"
            android:layout_height="50dp"/>

    </LinearLayout>
</LinearLayout>