<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:fillViewport="true">
    <LinearLayout
        android:padding="10dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:minWidth="300dp"
        android:layout_height="wrap_content">

        <TextView
            style="@style/story_title_big"
            android:text="@string/new_born"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <View style="@style/divider"></View>

        <TextView
            android:layout_gravity="end"
            android:textAlignment="textEnd"
            style="@style/small_dialog_data"
            android:id="@+id/date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/baby_pic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:padding="10dp"
                android:id="@+id/par_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/mnd_pic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:padding="10dp"
                android:id="@+id/par_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/room_pic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:padding="10dp"
                android:id="@+id/par_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <TextView
            android:paddingTop="20dp"
            android:textStyle="bold"
            android:text="@string/invovled_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <ListView
            android:paddingStart="30dp"
            android:id="@+id/users_involved"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="30dp">
        </ListView>

        <Button
            android:layout_gravity="center"
            android:id="@+id/okbtn"
            android:text="@string/ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>
</ScrollView>